--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,21 @@
 
   <header class="row">
     <div class="span4">left</div>
-   <div class="span4 offset4">right</div>
+   <div class="span5 offset3">
+      <ul class="header-links">
+        <li>
+          <a href="#">Explore</a>
+        </li>
+        <li>
+          <a href="#">Features</a>
+        <li>
+          <a href="#">Blog</a>
+        </li>
+        <li>
+          <a href="#" class="btn">Sign In</a>
+        </li>
+      </ul> 
+   </div>
   </header>
 
 <!-- yield is replaced by current view -->
