--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
    <div class="span5 offset3">
       <ul class="header-links">
         <li>
-          <a href="#">Explore</a>
+          <%= link_to 'Explore', home_path %>
         </li>
         <li>
           <a href="#">Features</a>
