--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -4,9 +4,40 @@
     <div class="span4">log in yo</div>
   </div>
   <div class="row selling-points">
-    <div class="span4">one</div>
-    <div class="span4">two</div>
-    <div class="span4">three</div>
+    <div class="span4">
+      <div class="selling-point">
+        <%= image_tag 'dog1.jpeg' %>
+        <div class="teaser-title">
+        Great collaboration starts with communication.
+        </div>
+        <div class="teaser-text">
+  Review changes, comment on lines of code, report issues, and plan the future of your project with flexible discussion tools.
+        </div>
+      </div>
+    </div>
+    <div class="span4">
+      <div class="selling-point">
+        <%= image_tag 'dog2.jpeg' %>
+        <div class="teaser-title">
+        Great collaboration starts with communication.
+        </div>
+        <div class="teaser-text">
+  Review changes, comment on lines of code, report issues, and plan the future of your project with flexible discussion tools.
+        </div>
+
+      </div>
+    </div>
+    <div class="span4">
+      <div class="selling-point">
+        <%= image_tag 'dog3.jpeg' %>
+        <div class="teaser-title">
+        Great collaboration starts with communication.
+        </div>
+        <div class="teaser-text">
+  Review changes, comment on lines of code, report issues, and plan the future of your project with flexible discussion tools.
+        </div>
+      </div>
+    </div>
   </div>
   <div class="row green-bar">
     <div class="span12">
